--- a/signup.html
+++ b/signup.html
@@ -6,25 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/index.css">
+  <link media="(max-width:768px)" rel="stylesheet" href="css/mobile.css">
   <title>News for bootstrap</title>
 </head>
 <body>
-  <div class="navbar navbar-default">
+  <div class="navbar navbar-default main-navbar">
     <div class="container">
-      <div class="navbar-heading">
+      <div class="navbar-header">
         <a href="index.html" class="navbar-brand"></a>
       </div>
-      <ul class="nav navbar-nav">
-        <li><a href="index.html" class="nav nav-default">首页</a></li>
-        <li><a href="#" class="nav nav-default">国内</a></li>
-        <li><a href="#" class="nav nav-default">国际</a></li>
-        <li><a href="#" class="nav nav-default">数读</a></li>
-        <li><a href="#" class="nav nav-default">社会</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="login.html" class="nav nav-default">登陆</a></li>
-        <li><a href="signup.html" class="nav nav-default">注册</a></li>
-      </ul>
+      <label id="menu" for="menu-check">MENU</label>
+      <input id="menu-check" class="hidden" type="checkbox">
+      <div class="hidden-xs">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html" class="nav nav-default">首页</a></li>
+          <li><a href="#" class="nav nav-default">国内</a></li>
+          <li><a href="#" class="nav nav-default">国际</a></li>
+          <li><a href="#" class="nav nav-default">数读</a></li>
+          <li><a href="#" class="nav nav-default">社会</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="login.html" class="nav nav-default">登陆</a></li>
+          <li><a href="signup.html" class="nav nav-default">注册</a></li>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="container container-sm">
