--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="container">
-    <div class="col-xs-8">
+    <div class="col-xs-8 xs-100">
       <h1 class="news-title">2年前他为教育事业和高圆圆分手，今成这般，高圆圆：我有一句MMP如鲠在喉</h1>
       <div class="news-status">16k评论 · 34min前发布
         <div class="label label-default">两性</div>
@@ -50,7 +50,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, rem commodloremi Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. quae consectetur veritatis omnis aut, aliquam quasi error, unde reiciendis dolore blanditiis repudiandae voluptate! Veniam aliquam pariatur non est.</p>
       </div>
     </div>
-    <div class="col-xs-4">
+    <div class="col-sm-4">
       <div class="recommand">
         <div class="title">相关推荐</div>
         <div class="list">
